Adding NSB bootstrapping to EShop and Sales.
TO DO: Debug why the post handler for Sales ViewModel composition isn't working.

--- a/src/EShop.UI/Properties/launchSettings.json
+++ b/src/EShop.UI/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "SimpleEShop.UI": {
+    "EShop.UI": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
