--- a/src/Sales.ViewModelComposition/Sales.ViewModelComposition.csproj
+++ b/src/Sales.ViewModelComposition/Sales.ViewModelComposition.csproj
@@ -5,6 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="BuyItemPostHandler.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="BuyItemPostHandler.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EShop.Messages\EShop.Messages.csproj" />
     <ProjectReference Include="..\ITOps.ViewModelComposition.Mvc\ITOps.ViewModelComposition.Mvc.csproj" />
     <ProjectReference Include="..\ITOps.ViewModelComposition\ITOps.ViewModelComposition.csproj" />
   </ItemGroup>
