--- a/src/EShop.UI/EShop.UI.csproj
+++ b/src/EShop.UI/EShop.UI.csproj
@@ -13,9 +13,11 @@
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
     <PackageReference Include="Microsoft.AspnetCore.Mvc" Version="2.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
+    <PackageReference Include="NServiceBus" Version="7.0.0-rc0001" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ITOps.Shared\ITOps.Shared.csproj" />
     <ProjectReference Include="..\ITOps.ViewModelComposition.Mvc\ITOps.ViewModelComposition.Mvc.csproj" />
     <ProjectReference Include="..\ITOps.ViewModelComposition\ITOps.ViewModelComposition.csproj" />
     <ProjectReference Include="..\Marketing.ViewModelComposition\Marketing.ViewModelComposition.csproj" />
