Wire up the events for Billing and Warehouse

--- a/src/Billing.Api/Billing.Api.csproj
+++ b/src/Billing.Api/Billing.Api.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EShop.Messages\EShop.Messages.csproj" />
+    <ProjectReference Include="..\ITOps.Shared\ITOps.Shared.csproj" />
   </ItemGroup>
 
 </Project>
