--- a/src/EShop.UI/EShop.UI.csproj
+++ b/src/EShop.UI/EShop.UI.csproj
@@ -22,7 +22,7 @@
     <ProjectReference Include="..\ITOps.ViewModelComposition\ITOps.ViewModelComposition.csproj" />
     <ProjectReference Include="..\Marketing.ViewModelComposition\Marketing.ViewModelComposition.csproj" />
     <ProjectReference Include="..\Sales.ViewModelComposition\Sales.ViewModelComposition.csproj" />
-    <ProjectReference Include="..\Warehouse.ViewModelComposition\Warehouse.ViewModelComposition.csproj" />
+    <ProjectReference Include="..\Shipping.ViewModelComposition\Shipping.ViewModelComposition.csproj" />
   </ItemGroup>
 
 </Project>
