--- a/src/ITOps.Shared/ITOps.Shared.csproj
+++ b/src/ITOps.Shared/ITOps.Shared.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="NServiceBus" Version="7.0.0-rc0001" />
+    <PackageReference Include="NServiceBus.Heartbeat" Version="3.0.0-rc0001" />
+    <PackageReference Include="NServiceBus.Metrics.ServiceControl" Version="3.0.0-beta0004" />
     <PackageReference Include="NServiceBus.Newtonsoft.Json" Version="2.1.0-beta0001" />
   </ItemGroup>
 
