--- a/src/Marketing.ViewModelComposition/Marketing.ViewModelComposition.csproj
+++ b/src/Marketing.ViewModelComposition/Marketing.ViewModelComposition.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EShop.Messages\EShop.Messages.csproj" />
     <ProjectReference Include="..\ITOps.ViewModelComposition.Mvc\ITOps.ViewModelComposition.Mvc.csproj" />
     <ProjectReference Include="..\ITOps.ViewModelComposition\ITOps.ViewModelComposition.csproj" />
   </ItemGroup>
