--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 # Auto detect text files and perform CRLF normalization
 * text=auto
+*.sh text eol=lf
 
 # Standard to msysgit
 *.doc	diff=astextplain
