--- a/src/Sales.Api/Sales.Api.csproj
+++ b/src/Sales.Api/Sales.Api.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="NServiceBus" Version="7.0.0-rc0001" />
     <PackageReference Include="NServiceBus.Autofac" Version="7.0.0-rc0001" />
     <PackageReference Include="NServiceBus.Newtonsoft.Json" Version="2.1.0-beta0001" />
+    <PackageReference Include="nservicebus.sagaaudit" Version="3.0.0-rc0001" />
   </ItemGroup>
 
   <ItemGroup>
