--- a/src/Warehouse.Azure/Warehouse.Azure.csproj
+++ b/src/Warehouse.Azure/Warehouse.Azure.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="NServiceBus" Version="7.0.0-rc0002" />
     <PackageReference Include="NServiceBus.Azure.Transports.WindowsAzureStorageQueues" Version="8.0.0-rc0001" />
+    <PackageReference Include="NServiceBus.Bridge.Connector" Version="2.0.0-rc0003" />
     <PackageReference Include="NServiceBus.Newtonsoft.Json" Version="2.1.0-beta0001" />
   </ItemGroup>
 
