Billing.Api running

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/src/EShop.UI/EShop.UI.csproj"
+                "${workspaceFolder}/src/EShop.sln"
             ],
             "problemMatcher": "$msCompile"
         }
