--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,8 +4,19 @@
    // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
    "version": "0.2.0",
    "configurations": [
+       {
+           "name": "Billing.Api",
+           "type": "coreclr",
+           "request": "launch",
+           "preLaunchTask": "build",
+           "program": "${workspaceFolder}/src/Billing.Api/bin/Debug/netcoreapp2.0/Billing.Api.dll",
+           "args": [],
+           "cwd": "${workspaceFolder}/src/Billing.Api",
+           "stopAtEntry": false,
+           "console": "externalTerminal"
+       },
         {
-            "name": ".NET Core Launch (web)",
+            "name": "EShop.UI",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
@@ -42,5 +53,14 @@
             "request": "attach",
             "processId": "${command:pickProcess}"
         }
-    ,]
+    ,],
+    "compounds": [
+        {
+            "name": "Debug All",
+            "configurations": [
+                "EShop.UI",
+
+            ]
+        }
+    ]
 }
