--- a/src/EShop.UI/EShop.UI.csproj
+++ b/src/EShop.UI/EShop.UI.csproj
@@ -13,7 +13,7 @@
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
     <PackageReference Include="Microsoft.AspnetCore.Mvc" Version="2.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
-    <PackageReference Include="NServiceBus" Version="7.0.0-rc0002" />
+    <PackageReference Include="NServiceBus" Version="7.1.6" />
   </ItemGroup>
 
   <ItemGroup>
