--- a/src/ITOps.Shared/ITOps.Shared.csproj
+++ b/src/ITOps.Shared/ITOps.Shared.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.2" />
-    <PackageReference Include="NServiceBus" Version="7.0.0-rc0002" />
+    <PackageReference Include="NServiceBus" Version="7.1.6" />
     <PackageReference Include="NServiceBus.Autofac" Version="7.0.0-rc0001" />
     <PackageReference Include="NServiceBus.Heartbeat" Version="3.0.0-rc0001" />
     <PackageReference Include="NServiceBus.Metrics.ServiceControl" Version="3.0.0-beta0004" />
