--- a/src/LoadGenerator/LoadGenerator.csproj
+++ b/src/LoadGenerator/LoadGenerator.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NServiceBus" Version="7.0.0-rc0002" />
+    <PackageReference Include="NServiceBus" Version="7.1.6" />
   </ItemGroup>
 
   <ItemGroup>
