--- a/src/Warehouse.Azure.UI/Warehouse.Azure.UI.csproj
+++ b/src/Warehouse.Azure.UI/Warehouse.Azure.UI.csproj
@@ -6,7 +6,7 @@
   
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
-    <PackageReference Include="NServiceBus" Version="7.0.0-rc0002" />
+    <PackageReference Include="NServiceBus" Version="7.1.6" />
     <PackageReference Include="NServiceBus.Azure.Transports.WindowsAzureStorageQueues" Version="8.0.0-rc0001" />
     <PackageReference Include="NServiceBus.Bridge.Connector" Version="2.0.0-rc0003" />
     <PackageReference Include="NServiceBus.Newtonsoft.Json" Version="2.1.0-beta0001" />
