--- a/src/ITOps.WarehouseBridge/ITOps.WarehouseBridge.csproj
+++ b/src/ITOps.WarehouseBridge/ITOps.WarehouseBridge.csproj
@@ -10,10 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NServiceBus.RabbitMQ" Version="5.0.0-rc0001" />
-    <PackageReference Include="NServiceBus.Azure.Transports.WindowsAzureStorageQueues" Version="8.0.0-rc0001" />
-    <PackageReference Include="NServiceBus.Bridge" Version="2.0.0-rc0003" />
-    <PackageReference Include="NServiceBus.Newtonsoft.Json" Version="2.1.0-beta0001" />
+    <PackageReference Include="NServiceBus.RabbitMQ" Version="5.0.1" />
+    <PackageReference Include="NServiceBus.Azure.Transports.WindowsAzureStorageQueues" Version="8.1.0" />
+    <PackageReference Include="NServiceBus.Bridge" Version="2.0.2" />
+    <PackageReference Include="NServiceBus.Newtonsoft.Json" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
