--- a/src/Sales.Api/Sales.Api.csproj
+++ b/src/Sales.Api/Sales.Api.csproj
@@ -9,10 +9,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.8" />
     <PackageReference Include="NServiceBus" Version="7.1.6" />
-    <PackageReference Include="NServiceBus.Newtonsoft.Json" Version="2.1.0-beta0001" />
-    <PackageReference Include="nservicebus.sagaaudit" Version="3.0.0-rc0001" />
+    <PackageReference Include="NServiceBus.Newtonsoft.Json" Version="2.2.0" />
+    <PackageReference Include="nservicebus.sagaaudit" Version="3.0.1" />
   </ItemGroup>
 
   <ItemGroup>
